src/objects/University_Course_Request__c.object
<CustomObject>
    <fields>
        <fullName>Requester_Country_P__c</fullName>
        <label>Requester Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Country__c</fullName>
        <label>Requester Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_State_P__c</fullName>
        <label>Requester State</label>
        <picklist>
            <controllingField>Requester_Country_P__c</controllingField>
            <picklistValues>
                <fullName>BAJRAM CURRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADRAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLEMCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 MAY ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDMILL ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT GEORGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT JOHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT MARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PHILIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUENOS AIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUCUMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAGATSOTNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEREVAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURGENLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAERNTEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIEDEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALZBURG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_State__c</fullName>
        <label>Requester State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Capacity__c</fullName>
        <label>Room Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SE_Mobile_Phone__c</fullName>
        <formula>SE_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SE Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active internal users can be selected.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active internal users can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>University_Course_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE_Phone__c</fullName>
        <formula>SE_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Evaluation__c</fullName>
        <formula>IF(  ISPICKVAL( Second_Instructor_Response__c , &quot;Confirmed&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zw&quot; , &quot;Met&quot;), 
IF( ISPICKVAL( Second_Instructor_Response__c , &quot;Declined&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zt&quot; , &quot;Not Met&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zv&quot;, &quot;WIP&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Instructor Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Name__c</fullName>
        <formula>Second_Instructor__r.FirstName &amp; &quot; &quot; &amp;  Second_Instructor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Instructor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Problem_Details__c</fullName>
        <label>Second Instructor Decline Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Response_Date__c</fullName>
        <label>Second Instructor Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Response_Shadow__c</fullName>
        <formula>TEXT(Second_Instructor_Response__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Instructor Response Shadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Response__c</fullName>
        <label>Second Instructor Response</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Instructor_Sug_Replacement__c</fullName>
        <label>Second Instructor Sug. Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Instructor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active internal users can be selected. User must be a systems engineer and a certified instructor.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Certified_Instructor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active internal users can be selected. User must be a systems engineer and a certified instructor.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>University_Course_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminders__c</fullName>
        <formula>IF( Send_Reminder_Emails__c , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Reminders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Time_in_hrs__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Session Time (in hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Requests_and_notes__c</fullName>
        <label>Special Requests and notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student_Manuals_Required__c</fullName>
        <inlineHelpText>North America only:
We will be ordering you student manuals for pickup</inlineHelpText>
        <label>Student Manuals Required (NA)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TZoffset__c</fullName>
        <defaultValue>7</defaultValue>
        <label>TZoffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Airport_Code__c</fullName>
        <label>Venue Airport Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Country_P__c</fullName>
        <label>Venue Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Country__c</fullName>
        <label>Venue Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Detail__c</fullName>
        <inlineHelpText>Please include building, floor, room number, or other location details if required.</inlineHelpText>
        <label>Venue Detail (If Required)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_In_NA__c</fullName>
        <formula>IF( 
(CONTAINS(  Venue_Country__c , &quot;USA&quot;) || 
CONTAINS( Venue_Country__c , &quot;United States&quot;) || 
CONTAINS( Venue_Country__c , &quot;UNITED STATES&quot;) || 
CONTAINS( Venue_Country__c , &quot;CANADA&quot;) || 
CONTAINS( Venue_Country__c , &quot;Canada&quot;) || 
CONTAINS( Venue_Country__c , &quot;CA&quot;)) 
,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue In NA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State_P__c</fullName>
        <label>Venue State</label>
        <picklist>
            <controllingField>Venue_Country_P__c</controllingField>
            <picklistValues>
                <fullName>BAJRAM CURRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADRAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLEMCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 MAY ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDMILL ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT GEORGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT JOHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT MARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PHILIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUENOS AIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUCUMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAGATSOTNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEREVAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURGENLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAERNTEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIEDEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALZBURG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <label>Venue State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Street__c</fullName>
        <label>Venue Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Time_Zone__c</fullName>
        <label>Venue Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Africa/Abidjan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Accra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Addis_Ababa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Algiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Asmera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Bamako</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Bangui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Banjul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Bissau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Blantyre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Brazzaville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Bujumbura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Cairo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Casablanca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Ceuta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Conakry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Dakar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Dar_es_Salaam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Douala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/El_Aaiun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Freetown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Gaborone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Harare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Johannesburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Kampala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Khartoum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Kigali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Kinshasa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Lagos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Zip__c</fullName>
        <label>Venue Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>University Course Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Desired_Course_Date_Start_Time__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Requested_Instructor__c</columns>
        <columns>Venue_City__c</columns>
        <columns>Venue_State__c</columns>
        <columns>Venue_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Venue_Known</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Desired_Course_Date_Start_Time__c</columns>
        <columns>Requested_Instructor__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assistance_with_Venue_Required__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Venue Known</label>
    </listViews>
    <listViews>
        <fullName>Venue_Unknown</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Desired_Course_Date_Start_Time__c</columns>
        <columns>Requested_Instructor__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assistance_with_Venue_Required__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Venue Unknown</label>
    </listViews>
    <nameField>
        <displayFormat>UCR-{0000}</displayFormat>
        <label>University Course Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>University Course Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Catering_required_if_venue_in_NA</fullName>
        <active>true</active>
        <errorConditionFormula>Venue_In_NA__c  &amp;&amp;  ISPICKVAL( Assistance_with_Catering_Required__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Assistance_with_Catering_Required__c</errorDisplayField>
        <errorMessage>Please specify if assistance with catering is required for north America.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Catering_yes_if_venue_not_NA</fullName>
        <active>true</active>
        <errorConditionFormula>(!Venue_In_NA__c   &amp;&amp;   !ISBLANK( Venue_Country__c ) )
&amp;&amp;  ISPICKVAL( Assistance_with_Catering_Required__c , &quot;Yes&quot;)</errorConditionFormula>
        <errorDisplayField>Assistance_with_Catering_Required__c</errorDisplayField>
        <errorMessage>Assistance with catering can be provided only in north America.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Start_Time_Not_After_0930AM</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE(MID (TEXT (  Desired_Course_Date_Start_Time__c  ), 12, 2))&gt; 9+TZoffset__c  || 
(VALUE(MID (TEXT ( Desired_Course_Date_Start_Time__c ), 12, 2))= 9+TZoffset__c &amp;&amp; 
VALUE(MID (TEXT ( Desired_Course_Date_Start_Time__c ), 15, 2)) &gt; 30)</errorConditionFormula>
        <errorMessage>Desired course start time cannot be after 0930 AM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Start_Time_Not_Before_0830AM</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE(MID (TEXT (  Desired_Course_Date_Start_Time__c  ), 12, 2))&lt; 8+TZoffset__c  || 
(VALUE(MID (TEXT ( Desired_Course_Date_Start_Time__c ), 12, 2))= 8+TZoffset__c &amp;&amp; 
VALUE(MID (TEXT ( Desired_Course_Date_Start_Time__c ), 15, 2)) &lt; 30)</errorConditionFormula>
        <errorMessage>Desired course start time cannot be before 0830 AM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Class_over_20</fullName>
        <active>true</active>
        <errorConditionFormula>Large_Course__c = FALSE &amp;&amp; Expected_course_size__c &gt;=21</errorConditionFormula>
        <errorDisplayField>Expected_course_size__c</errorDisplayField>
        <errorMessage>Courses with 21 or more participants require special approval. It is recommended that you request an additional course. if you still want to proceed then check the “Large Course” checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pickup_details_missing_yes_manuals</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Student_Manuals_Required__c , &quot;Yes&quot;)   &amp;&amp; 
( ISBLANK( Pickup_Location_Name__c )  || 
ISBLANK(  Pickup_Street__c  )  || 
ISBLANK( Pickup_City__c )  ||  
ISBLANK(  Pickup_State__c  )  || 
ISBLANK(   Pickup_Country__c   )  ||    
ISBLANK(  Pickup_Zip__c  ) ||
ISBLANK(   Name_of_Person_Picking_Up__c ) ||
ISBLANK(   Phone_of_Person_Picking_Up__c )
)</errorConditionFormula>
        <errorDisplayField>Student_Manuals_Required__c</errorDisplayField>
        <errorMessage>Please specify the full pickup details (name and phone of person, location name, street, city, state, country, zip).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pickup_details_not_blank_no_manuals</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Student_Manuals_Required__c ,&quot;No&quot;)  &amp;&amp; 
( !ISBLANK( Pickup_Location_Name__c )  || 
!ISBLANK(  Pickup_Street__c  )  || 
!ISBLANK( Pickup_City__c )  ||  
!ISBLANK(  Pickup_State__c  )  ||  
!ISBLANK(  Pickup_Country__c)  ||   
!ISBLANK(  Pickup_Zip__c  )||
!ISBLANK(   Name_of_Person_Picking_Up__c )||
!ISBLANK(   Phone_of_Person_Picking_Up__c )
)</errorConditionFormula>
        <errorDisplayField>Student_Manuals_Required__c</errorDisplayField>
        <errorMessage>Pickup details must be filled only if student manuals are required (NA location). Please clear the content of the pickup detail fields (name and phone of person, location name, street, city, state, country, zip).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_location_full_no_assistance</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Assistance_with_Venue_Required__c  ,&quot;No&quot;)  &amp;&amp; 
 !ISBLANK(   Preferred_Locations__c   )</errorConditionFormula>
        <errorDisplayField>Preferred_Locations__c</errorDisplayField>
        <errorMessage>If assistance with venue is not required (NA only) please clear the content of the preferred locations field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_location_missing_yes_assistanc</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Assistance_with_Venue_Required__c  ,&quot;Yes&quot;)  &amp;&amp; 
 ISBLANK(   Preferred_Locations__c   )</errorConditionFormula>
        <errorDisplayField>Preferred_Locations__c</errorDisplayField>
        <errorMessage>If assistance with a venue is required (NA Only) please provide three preferred locations and note the room capacity for each location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Problem_Details_Missing_Instru_In_Traini</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Instructor_in_Training_Response__c , &quot;Declined&quot;)  &amp;&amp; 
 ISBLANK(  Instructor_in_Training_Problem_Details__c )</errorConditionFormula>
        <errorDisplayField>Instructor_in_Training_Problem_Details__c</errorDisplayField>
        <errorMessage>Please specify reason for decline.</errorMessage>
    </validationRules>
</CustomObject>